Added TC ONB2-107 Personal Information section in the new onboarding page should be visible

--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 myCompSignin = https://staging.onboarding.mycomp.ch/sign-in
 emailAhmet = ahmet.bicakci@testtechno.com
 passwordAhmet = Nail&nail.23
+
+url = https://staging.onboarding.mycomp.ch/
