--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 myCompSignin = https://staging.onboarding.mycomp.ch/sign-in
 emailAhmet = ahmet.bicakci@testtechno.com
 passwordAhmet = Nail&nail.23
+requester_email=requester.test@yopmail.com
+requester_password=AB123@ab
