--- a/configuration.properties
+++ b/configuration.properties
@@ -3,4 +3,9 @@ myCompSignin = https://staging.onboarding.mycomp.ch/sign-in
 emailAhmet = ahmet.bicakci@testtechno.com
 passwordAhmet = Nail&nail.23
 
+
+passwordSaid =AB123@ab
+emailSaid=said.ozkan@testtechno.com
+
+
 url = https://staging.onboarding.mycomp.ch/
