--- a/configuration.properties
+++ b/configuration.properties
@@ -3,4 +3,7 @@ myCompSignin = https://staging.onboarding.mycomp.ch/sign-in
 emailAhmet = ahmet.bicakci@testtechno.com
 passwordAhmet = Nail&nail.23
 
+requester_email=requester.test@yopmail.com
+requester_password=AB123@ab
+
 url = https://staging.onboarding.mycomp.ch/
