Added TC: ONB2-152 New Contact button should be clickable

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,6 +3,8 @@ myCompSignin = https://staging.onboarding.mycomp.ch/sign-in
 emailAhmet = ahmet.bicakci@testtechno.com
 passwordAhmet = Nail&nail.23
 
+requester_email=requester.test@yopmail.com
+requester_password=AB123@ab
 
 passwordSaid =AB123@ab
 emailSaid=said.ozkan@testtechno.com
