Adjusted TC ONB2-251 The user should log in with the correct credentials

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,13 +1,19 @@
 browser=chrome
-myCompSignin = https://staging.onboarding.mycomp.ch/sign-in
-emailAhmet = ahmet.bicakci@testtechno.com
-passwordAhmet = Nail&nail.23
+myCompStagingSignin = https://staging.onboarding.mycomp.ch/sign-in
+myCompProd = https://onboarding.mycomp.ch/sign-in
+superAdminUser = ahmet.bicakci@testtechno.com
+superAdmin_password = Nail&nail.23
 
-requester_email=requester.test@yopmail.com
+adminUser =
+admin_password=
+
+requesterUser=requester.test@yopmail.com
 requester_password=AB123@ab
 
-passwordSaid =AB123@ab
-emailSaid=said.ozkan@testtechno.com
+approverUser=
+approver_password=
 
+emailSaid=said.ozkan@testtechno.com
+passwordSaid =AB123@ab
 
 url = https://staging.onboarding.mycomp.ch/
