Added  TC ONB2-339 Reset Password button should be clickable at the Forgot Password page

--- a/configuration.properties
+++ b/configuration.properties
@@ -17,3 +17,14 @@ emailSaid=said.ozkan@testtechno.com
 passwordSaid =AB123@ab
 
 url = https://staging.onboarding.mycomp.ch/
+
+inValidEmail = ahmet.bicakcitesttechno.com
+wrongPassword = 12345678
+invalidEmailMessage = "Email must be a valid email"
+wrongPasswordMessage = "Credentials did not match"
+incorrectEmail = ahmetbicakci@testtechno.com
+incorrectEmailMessage = "Credentials did not match"
+emptyEmailTextFieldMessage = "Please fill out all required fields correctly"
+emptyPasswordTextFieldMessage = "Please fill out all required fields correctly"
+emptyEmail=
+emptyPassword=
