Adjusted Orders codes, configuration.properties, login() method, Driver.java

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,19 +1,19 @@
 browser=chrome
-myCompStagingSignin = https://staging.onboarding.mycomp.ch/sign-in
-myCompProd = https://onboarding.mycomp.ch/sign-in
-superAdminUser = ahmet.bicakci@testtechno.com
-superAdmin_password = Nail&nail.23
+url=https://staging.onboarding.mycomp.ch/
+myCompStagingSignin=https://staging.onboarding.mycomp.ch/sign-in
+myCompProd=https://onboarding.mycomp.ch/sign-in
 
-adminUser =
-admin_password=
+superAdminUser=automation.superadmin@yopmail.com
+superAdmin_password=AB123@ab
+
+adminUser=automation.admin@yopmail.com
+admin_password=AB123@ab
 
 requesterUser=requester.test@yopmail.com
 requester_password=AB123@ab
 
-approverUser=
-approver_password=
+approverUser=approver.user@yopmail.com
+approver_password=AB123@ab
 
 emailSaid=said.ozkan@testtechno.com
-passwordSaid =AB123@ab
-
-url = https://staging.onboarding.mycomp.ch/
+passwordSaid=AB123@ab
