update 23.11.2023 by yavuz

--- a/configuration.properties
+++ b/configuration.properties
@@ -17,3 +17,9 @@ approver_password=AB123@ab
 
 emailSaid=said.ozkan@testtechno.com
 passwordSaid=AB123@ab
+
+wrongPassword=AB123@AB
+emptyPassword=
+inValidEmail=automation.superadmin@yopmail
+incorrectEmail=test_test@yopmail.com
+emptyEmail=
