update 28.11.2023 by yavuz added new features

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,17 +3,15 @@ url=https://staging.onboarding.mycomp.ch/
 myCompStagingSignin=https://staging.onboarding.mycomp.ch/sign-in
 myCompProd=https://onboarding.mycomp.ch/sign-in
 
-superAdminUser=automation.superadmin@yopmail.com
+superAdminUser=@yopmail.com
 superAdmin_password=AB123@ab
 
 adminUser=automation.admin@yopmail.com
 admin_password=AB123@ab
 
-requesterUser=requester.test@yopmail.com
-requester_password=AB123@ab
+employeeTester=employee_test@yopmail.com
+employeePassword=AB123@ab
 
-approverUser=approver.user@yopmail.com
-approver_password=AB123@ab
 
 emailSaid=said.ozkan@testtechno.com
 passwordSaid=AB123@ab
