update 30.11.2023 by yavuz added new directories

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,15 +3,17 @@ url=https://staging.onboarding.mycomp.ch/
 myCompStagingSignin=https://staging.onboarding.mycomp.ch/sign-in
 myCompProd=https://onboarding.mycomp.ch/sign-in
 
-superAdminUser=@yopmail.com
+superAdminUser=superadmin_test@yopmail.com
 superAdmin_password=AB123@ab
 
-adminUser=automation.admin@yopmail.com
+adminUser=admin_test@yopmail.com
 admin_password=AB123@ab
 
-employeeTester=employee_test@yopmail.com
+employeeUser=employee_test@yopmail.com
 employeePassword=AB123@ab
 
+lineMenagerUser= linemenager_test@yopmail.com
+lineMenagerPassword=AB123@ab
 
 emailSaid=said.ozkan@testtechno.com
 passwordSaid=AB123@ab
