Updated onboarding,offboarding,order,department,companies CRUD tests with all role

--- a/configuration.properties
+++ b/configuration.properties
@@ -15,8 +15,8 @@ employeePassword=AB123@ab
 lineMenagerUser= linemenager_test@yopmail.com
 lineMenagerPassword=AB123@ab
 
-emailSaid=said.ozkan@testtechno.com
-passwordSaid=AB123@ab
+supplier=supplier_test@yopmail.com
+supplier_password=AB123@ab
 
 wrongPassword=AB123@AB
 emptyPassword=
