added practice feature

--- a/configuration.properties
+++ b/configuration.properties
@@ -23,3 +23,5 @@ emptyPassword=
 inValidEmail=automation.superadmin@yopmail
 incorrectEmail=test_test@yopmail.com
 emptyEmail=
+
+practiceUser=practice_admin@yopmail.com
