--- a/configuration.properties
+++ b/configuration.properties
@@ -25,3 +25,12 @@ incorrectEmail=test_test@yopmail.com
 emptyEmail=
 
 practiceUser=practice_admin@yopmail.com
+
+
+supplierDDM=supplier_test@yopmail.com | Supplier Test TESTTTT
+employeeDDM=employee_test@yopmail.com | Employee TESTTTT
+lineManagerDDM=linemenager_test@yopmail.com | LineManager Test
+resourceDDM=Phone
+resourceItemDDM=Samsung
+departmentDDM=IT_Test
+siteDDM=Amsterdam
