updated onboarding,offboarding,order,practice features

--- a/configuration.properties
+++ b/configuration.properties
@@ -12,7 +12,7 @@ admin_password=AB123@ab
 employeeUser=employee_test@yopmail.com
 employeePassword=AB123@ab
 
-lineMenagerUser= linemenager_test@yopmail.com
+lineMenagerUser= linemanager_test@yopmail.com
 lineMenagerPassword=AB123@ab
 
 supplier=supplier_test@yopmail.com
@@ -25,6 +25,8 @@ incorrectEmail=test_test@yopmail.com
 emptyEmail=
 
 practiceUser=practice_admin@yopmail.com
+approverUser=approver_test@yopmail.com
+approver_password=AB123@ab
 
 
 supplierDDM=supplier_test@yopmail.com | Supplier Test TESTTTT
