updated conf. prop

--- a/configuration.properties
+++ b/configuration.properties
@@ -12,8 +12,8 @@ admin_password=AB123@ab
 employeeUser=employee_test@yopmail.com
 employeePassword=AB123@ab
 
-lineMenagerUser= linemanager_test@yopmail.com
-lineMenagerPassword=AB123@ab
+lineManagerUser= linemanager_test@yopmail.com
+lineManagerPassword=AB123@ab
 
 supplier=supplier_test@yopmail.com
 supplier_password=AB123@ab
@@ -31,7 +31,7 @@ approver_password=AB123@ab
 
 supplierDDM=supplier_test@yopmail.com | Supplier Test TESTTTT
 employeeDDM=employee_test@yopmail.com | Employee TESTTTT
-lineManagerDDM=linemenager_test@yopmail.com | LineManager Test
+lineManagerDDM=linemanager_test@yopmail.com | LineManager Test
 resourceDDM=Phone
 resourceItemDDM=Samsung
 departmentDDM=IT_Test
